[package]
name = "helix-user-domain"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"


[lib]
name="helix_user_domain"

[dependencies]
## Error management
thiserror = "1.0"

##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"

##DATA UTILS => UTC Date, UUID generation
uuid = { version = "0.8", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }

##Password hashing
rust-crypto = "^0.2"
tokio-postgres = "0.5.5"
async-trait = "0.1.48"


