[package]
name = "pg-db-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pg_db_storage"

[dependencies]
helix-user-domain = { path = "../../helix-user-domain" }

##DATA UTILS => UTC Date, UUID generation
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v5", "serde"]}

async-trait = "0.1.48"
tokio-postgres = {version ="0.5.5", features =["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"]}
deadpool-postgres = "0.5.0"
